--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,7 @@
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Weather App" />
     <meta property="og:description" content="React로 만든 Weather App" />
-    <meta property="og:url" content="https://bestthe.github.io/Movie-App" />
+    <meta property="og:url" content="https://bestthe.github.io/Weather-App" />
     <meta property="og:image" content="%PUBLIC_URL%/thumbnail.png" />
 
     <!-- Twitter Card -->
